fix: align inline form elements

--- a/source/_patterns/01-molecules/04-forms/00-fields.scss
+++ b/source/_patterns/01-molecules/04-forms/00-fields.scss
@@ -2,7 +2,7 @@
   width: 100%;
 
   &__input-wrapper {
-    margin: .45em 0;
+    margin: 0.45em;
     position: relative;
 
     &--select {
