--- a/source/_patterns/03-templates/02-checkout-layout.scss
+++ b/source/_patterns/03-templates/02-checkout-layout.scss
@@ -114,10 +114,6 @@
     }
   }
 
-  .field__input-wrapper {
-    margin: 0.45em;
-  }
-
   .order-summary__section--discount {
     .field__input-wrapper {
       margin : 0 0.45em;
